--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
+        <a href="./index.html" class="logo"
+          >WEB<span class="text-studio">STUDIO</span></a
+        >
         <ul class="logo-info">
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
