--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
           >WEB<span class="text-studio">STUDIO</span></a
         >
         <ul class="logo-info">
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./index.html">Portfolio</a></li>
+          <li><a href="./index.html">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="addr">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact-link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contact-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
