--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          >WEB<span class="text-studio">STUDIO</span></a
+          >WEB<span class="text-studio">Studio</span></a
         >
         <ul class="logo-info">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html">Portfolio</a></li>
-          <li><a href="./index.html">Contacts</a></li>
+          <li>
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">Portfolio</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address class="addr">
+      <address class="address-block">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="contact-link"
