--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"
           >WEB<span class="text-studio">Studio</span></a
         >
         <ul class="logo-info">
