--- a/index.html
+++ b/index.html
@@ -51,36 +51,36 @@
     </header>
     <main>
       <section class="main-page">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="title-button" type="button">Order Service</button>
       </section>
       <section class="features">
-        <h2 class="visually-hidden">Features</h2>
+        <h2 class="title-features">Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="features-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,52 +88,52 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul class="team-container">
           <li class="team-card">
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-list-title">Mark Guerrero</h3>
+            <p class="team-card-text">Product Designer</p>
           </li>
           <li class="team-card">
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-list-title">Tom Ford</h3>
+            <p class="team-card-text">Frontend Developer</p>
           </li>
           <li class="team-card">
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-list-title">Camila Garcia</h3>
+            <p class="team-card-text">Marketing</p>
           </li>
           <li class="team-card">
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-list-title">Daniel Wilson</h3>
+            <p class="team-card-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="Portfolio">
-        <h2>Our Portfolio</h2>
-        <ul class="Portfolio-container">
-          <li class="Portfolio-card">
+        <h2 class="port-title">Our Portfolio</h2>
+        <ul class="portfolio-container">
+          <li class="portfolio-card">
             <img src="./images/card-1.jpg" alt="Banking App" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="port-title-list">Banking App</h3>
+            <p class="port-text-list">App</p>
           </li>
           <li class="Portfolio-card">
             <img src="./images/card-2.jpg" alt="Cashless Payment" width="360" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="port-title-list">Cashless Payment</h3>
+            <p class="port-text-list">Marketing</p>
           </li>
           <li class="Portfolio-card">
             <img src="./images/card-3.jpg" alt="Meditation App" width="360" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="port-title-list">Meditation App</h3>
+            <p class="port-text-list">App</p>
           </li>
           <li class="Portfolio-card">
             <img src="./images/card-4.jpg" alt="Taxi Service" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="port-title-list">Taxi Service</h3>
+            <p class="port-text-list">Marketing</p>
           </li>
           <li class="Portfolio-card">
             <img
@@ -141,20 +141,22 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="port-title-list">Screen Illustrations</h3>
+            <p class="port-text-list">Design</p>
           </li>
           <li class="Portfolio-card">
             <img src="./images/card-6.jpg" alt="Online Courses" width="360" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="port-title-list">Online Courses</h3>
+            <p class="port-text-list">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"
+        >WEB<span class="text-studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
