--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         <h2 class="title-features">Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="title-list-features">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title-list-features">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title-list-features">Diligence</h3>
             <p class="features-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title-list-features">Technologies</h3>
             <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -154,7 +154,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >WEB<span class="text-studio">Studio</span></a
+        >WEB<span class="white">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
